Fixed the main page in landscape mode
Added a fixed with to the research icon on the main page as Safari doesn’t know how to calculate the width of the research icon properly when only given the height for some weird reason.

Made the div that marks the top of the page completely invisible since there’s no content inside it.

--- a/src/styles/MainPage.module.css
+++ b/src/styles/MainPage.module.css
@@ -22,7 +22,6 @@
 
 .icon-wrapper {
   flex-direction: row;
-  justify-content: center;
   font-family: Black Chancery;
   font-size: 3.4rem;
   padding-right: 10px;
@@ -30,7 +29,10 @@
 }
 
 .icon {
-  height: 2em;
+  --icon-height: 2em;
+
+  height: var(--icon-height);
+  width: calc(var(--icon-height) / (160 / 120));
 }
 
 .name {
